--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-react-template",
   "version": "0.0.1",
   "description": "An Electron template using React.",
-  "main": "index.js",
+  "main": "app/electron/main.js",
   "private": true,
   "directories": {
     "doc": "docs",
