--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "test"
   },
   "scripts": {
+    "dev": "webpack --mode development --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +19,18 @@
   "author": "Karl Horning",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^24.1.3"
+    "babel-loader": "^9.1.2",
+    "electron": "^24.1.3",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.1",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
