--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "electron": "^24.1.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.2",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2"
   },
