--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "webpack --mode development --config ./webpack.config.js",
+    "dev-server": "webpack serve --mode development --config ./webpack.development.js",
+    "dev": "cross-env NODE_ENV=development electron .",
+    "preprod": "webpack --mode production --config ./webpack.production.js",
+    "prod": "cross-env NODE_ENV=production electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,13 +23,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "electron": "^24.1.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.2",
     "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/core": "^7.21.5",
